--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.listviewpersonas">
 
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,15 +13,16 @@
         android:roundIcon="@mipmap/libroimg"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Registro.HomeActivity"></activity>
+        <activity android:name=".Registro.RegistroActivity"></activity>
+        <activity android:name=".Registro.HomeActivity" />
         <activity android:name=".Vista.Add_Libro" />
         <activity
             android:name=".Vista.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".Vista.Detalle" />
+        <activity android:name=".Vista.MainActivity" />
         <activity
-            android:name=".Vista.MainActivity"></activity>
-        <activity android:name=".Registro.LoginActivity"
+            android:name=".Registro.LoginActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
